# decipher_data_handler

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  scripts.py
.github/workflow/: release.yml
.github/workflows/: release.yml
decipher/: exam_data.py
decipher/data/: __init__.py  data_manager.py  util.py
decipher/processing/: pipeline.py  transformers.py
examples/: data_manager_test.py  sanity_check.py
tests/: test_data.py  test_processing.py
tests/test_processing_datasets/: test_dob_data.csv  test_screening_data.csv
