[tool.poetry]
name = "decipher"
version = "0.0.1"
description = "Utilities for Decipher"
authors = ["Thorvald Molthe Ballestad <thorvald@simula.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pylint = "^2.17.1"
mypy = "^1.1.1"


[tool.poetry.group.sparse.dependencies]
scipy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
